font family and variable colours added in css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=roboto">
     <title>Girdika Godwin's Portfolio!</title>
 </head>
 
