--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
 <header>
     <h1>Girdika Godwin</h1>
     <nav>
-        <a href="#about-me">About Me</href>
-        <a href="#my-works">My Works</href>
-        <a href="#contact-me">Contact Me</href>
+       <ul>
+        <li><a href="#about-me">About Me</href></li>
+        <li><a href="#my-works">My Works</href></li>
+        <li><a href="#contact-me">Contact Me</href></li>
+        </ul>
     </nav>
 </header>
 
 <body>
 <section>
     <figure class = "avatar"> <img src = "assets/images/bitmoji-hello.png"></figure>
-    <h2 class="about-me">About Me</h2>
+    <h2 id="about-me">About Me</h2>
     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit 
@@ -32,7 +34,7 @@
 </section>
 
 <main>
-    <h2 class = "my-works">My Works</h2>
+    <h2 id="my-works">My Works</h2>
     <figure class = first-work><img src = "assets/images/scsh-prework-study-guide.png"></figure>
     <figure><img src = "assets/images/placeholder-image.png"></figure>
     <figure><img src = "assets/images/placeholder-image.png"></figure>
@@ -44,7 +46,7 @@
 </body>
 
 <footer>
-    <h2 class = "contact-me">Contact Me</h2>
+    <h2 id="contact-me">Contact Me</h2>
     <p>Thank you for taking the time in looking through my portfolio and e-meeting me (if we haven't already me!).
     If you would like to get in contact, you can reach me by the following e-mail address. 
     <span>E-mail:</span> email@email.com </p>
