--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <body>
 <section>
     <figure class = "avatar"> <img src = "assets/images/bitmoji-hello.png"></figure>
-    <h2 id="about-me">About Me</h2>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+    <h2 id="about-me">About Me</h2> <hr>
+    <p class = "about-me-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit 
         esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
