--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             culpa qui officia deserunt mollit anim id est laborum."</p>
 </section>
 
-
-   <aside> <h2 id="my-works">My Works</h2>
-    <figure class = first-work><img src = "assets/images/scsh-prework-study-guide.png"></figure>
-</aside><main><figure><img src = "assets/images/placeholder-image.png"></figure>
-    <figure><img src = "assets/images/placeholder-image.png"></figure>
-    <figure><img src = "assets/images/placeholder-image.png"></figure>
-    <figure><img src = "assets/images/placeholder-image.png"></figure>
-    <figure><img src = "assets/images/placeholder-image.png"></figure>
-    <figure><img src = "assets/images/placeholder-image.png"></figure>
-</div></main>
+<main>
+  <div><article> <h2 id="my-works">My Works</h2>
+    <figure><a href="https://godwingi.github.io/prework-study-guide/"><img class = "first-work" src = "assets/images/scsh-prework-study-guide.png" alt="Pre-work study guide landing page image"></a></figure></div></article>
+    <aside><div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
+    <div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
+<div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
+<div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
+<div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
+<div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
+    </aside></main>
 </body>
 
 <footer>
