contact me section completed

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 </body>
 
 <footer>
-    <h2 id="contact-me">Contact Me</h2>
-    <p>Thank you for taking the time in looking through my portfolio and e-meeting me (if we haven't already me!).
-    If you would like to get in contact, you can reach me by the following e-mail address. 
+    <h2 id="contact-me">Contact Me</h2><br>
+    <p>Thank you for taking the time in looking through my portfolio and e-meeting me (if we haven't already me!).<br>
+    If you would like to get in contact, you can reach me by the following e-mail address. <br> <br>
     <span>E-mail:</span> email@email.com </p>
 </footer>
 
