--- a/index.html
+++ b/index.html
@@ -40,14 +40,20 @@
 
 <main>
   <div><article> <h2 id="my-works">My Works</h2>
-    <figure><a href="https://godwingi.github.io/prework-study-guide/"><img class = "first-work" src = "assets/images/scsh-prework-study-guide.png" alt="Pre-work study guide landing page image"></a></figure></div></article>
+    <figure><a href="https://godwingi.github.io/prework-study-guide/"><img class = "first-work" src = "assets/images/scsh-prework-study-guide.png" alt="Pre-work study guide landing page image"></a></figure>
+    <figcaption><span>Pre-work Study Guide:</span> The image above will lead you to the first work I created prior to the start of bootcamp.</figcaption></div></article>
     <aside><div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
     <div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
 <div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
+<figcaption class ="sample"><span>Sample Text</span> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+    nisi ut aliquip ex ea commodo consequat.</figcaption>
 <div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
 <div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
 <div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
-    </aside></main>
+<figcaption class ="sample"><span>Sample Text</span> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+    nisi ut aliquip ex ea commodo consequat.</figcaption>  </aside></main>
 </body>
 
 <footer>
