--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div><article> <h2 id="my-works">My Works</h2>
     <figure><a href="https://godwingi.github.io/prework-study-guide/"><img class = "first-work" src = "assets/images/scsh-prework-study-guide.png" alt="Pre-work study guide landing page image"></a></figure>
     <figcaption><span>Pre-work Study Guide:</span> The image above will lead you to the first work I created prior to the start of bootcamp.</figcaption></div></article>
-    <aside><div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
+    <aside><div><figure><a href="https://kcl20.github.io/Cinema-Travel-Guide/"><img src = "assets/images/homepage.png" alt="Cinema Travel Guide"></a></figure></div>
     <div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
 <div><figure><img src = "assets/images/placeholder-image.png"></figure></div>
 <figcaption class ="sample"><span>Sample Text</span> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
